2007-01-13  Zack Weinberg  <zackw@panix.com>

	* schema_migration.cc: Further prune includes and using-declarations.
	(lowercase_facet, calculate_id): Delete.
	(is_ws): Convert from class to predicate function.
	(sqlite3_value_cstr): New, type-adjustment wrapper around _value_text.
	(sqlite_sha1_fn): Clarify logic by using remove_copy_if,
	sqlite3_value_cstr, and a simpler loop in the args>1 case.
	Use transforms.hh's calculate_ident instead of calculate_id.
	(massage_sql_tokens): Move to directly above sole user.
	(calculate_schema_id): Use calculate_ident.
	(sqlite_unbase64_fn): Use sqlite_value_cstr.

	* transforms.cc (encode_hexenc_inner, encode_hexenc, decode_hex_char)
	(decode_hexenc_inner, decode_hexenc): Delete.
	(xform<Botan::Hex_Encoder>): Request lowercase output.
	(calculate_ident): Put a Botan::Hex_Encoder in the pipeline rather
	than doing a separate call to encode_hexenc.  Delete unused overload.
	* transforms.hh (encode_hexenc, decode_hexenc): Define in terms of
	appropriate xform<> instantiations.
	(pack, unpack): Delete unnecessary extern-template declarations.
	(calculate_ident): Delete unused overload.

2007-01-12  Zack Weinberg  <zackw@panix.com>

	* tests/db_migrate_on_bad_schema: Rename to schema_migration_bad_schema.
	Rewrite to test for specific error messages corresponding to the
	five-way distinction made by check_sql_schema.
	* tests/migrate_with_rosterify: Rename to
	schema_migration_with_rosterify.
	* testsuite.lua: Update.

	* schema_migration.cc: Prune headers and using-declarations.  Make
	various things static and/or wrapped in the anonymous namespace.
	(struct migrator): Delete.
	(migrator_cb): Move definition to just above first use.
	(struct migration_event, migration_events, n_migration_events)
	(schema_to_migration, diagnose_unrecognized_schema, check_sql_schema):
	New functions and data.
	(migrate_monotone_schema): Put all the logic that used to be in
	migrator::migrate here instead.  Use two loops instead of one loop